-smiley faces on Smiley Rating page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -4,11 +4,11 @@
     <base href="/" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>myApp</title>
-    <meta name="description" content="Description for myApp">
+    <title>Phases</title>
+    <meta name="description" content="The one-step mood tracker">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="theme-color" content="#000000">
-    <link rel="shortcut icon" href="favicon.ico" />
+<!--    check to see if theme color change worked was #000000 before-->
+    <meta name="theme-color" content="#b3fcd6">
     <link rel="manifest" href="manifest.webapp" />
     <link rel="stylesheet" href="content/css/loading.css">
     <!-- jhipster-needle-add-resources-to-root - JHipster will add new resources here -->
